# rchart

./: .gitignore  README.md  package.json  svelte.config.js  tailwind.config.cjs  vite-tauri-setup.json  vite.config.js  vite.config.ts
data/: create.sql  sqlite.db
src/: app.css  app.d.ts.ts  app.html  hooks.server.ts  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/model/: bmc_base.rs  patient.rs  task.rs
src-tauri/src/store/: mod.rs
src/lib/components/: MessageCenter.svelte  ProfileButton.svelte  SidebarTab.svelte  StatusBar.svelte  TabList.svelte  tab.svelte  tabbar.svelte
src/lib/header/: Header.svelte
src/routes/: +layout.svelte  +page.svelte  card.svelte  index.svelte
src/routes/about/: +page.svelte  +page.ts
src/routes/extensions/: +page.svelte
src/routes/list/: +page.svelte
src/routes/options/: +page.svelte
src/routes/patient/: [number].svelte
src/routes/profile/: +page.svelte
src/routes/resources/: +page.svelte
src/routes/team/: +page.svelte
src/stores/: TabStore.js  TabStore.ts
