[package]
name = "app"
version = "0.1.0"
description = "an ehr for the world"
authors = [ "Logan Nguyen" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
rusqlite = { version = "*", features = ["bundled"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
#sqlite = { version = "0.26.0" } 
#sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
#tokio = { version = "1.21.2", feature = [ "full" ] }
#sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
#sea-orm-cli = "0.9.3"
#tauri-plugin-sql = { path = "../../..", features = ["sqlite"] }

#git = "https://github.com/tauri-apps/tauri-plugin-sql"
#tag = "v0.1.0"
#features = ["sqlite"] # or "postgres", or "mysql"
#branch = "main"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["postgres"] # or "sqlite", or "mysql"
